Fixed Image Styling So it doesn't stretch

--- a/client/src/components/layout/Navbar/Dropdown/Dropdown.scss
+++ b/client/src/components/layout/Navbar/Dropdown/Dropdown.scss
@@ -32,6 +32,9 @@
 
         .heading-img {
             width: 30px;
+            height: 30px;
+            object-fit: cover;
+            object-position: 50% 50%;
             margin-right: 7.5px;  
             border-radius: 50%;
         }
